force-app/main/default/objects/Location/fields/Default_B_Trailer__c.field-meta.xml
<CustomField>
    <fullName>Default_B_Trailer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The default B Trailer for this Truck. It&apos;s rego will be populated on the Work Order on selection of the Vehicle</description>
    <label>Default B Trailer</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Locations (Default B Trailer)</relationshipLabel>
    <relationshipName>ParentTruckToBTrailer</relationshipName>
    <type>Lookup</type>
</CustomField>