force-app/main/default/objects/Location/fields/Line_Haul__c.field-meta.xml
<CustomField>
    <fullName>Line_Haul__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a Trailer is a Line Haul trailer, and not based in a location or territory</description>
    <inlineHelpText>Indicates that a Trailer is a Line Haul trailer, and not based in a location or territory</inlineHelpText>
    <label>Line Haul</label>
    <type>Checkbox</type>
</CustomField>