force-app/main/default/objects/Location/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Network</label>
    <referenceTo>Network__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>