force-app/main/default/objects/Location/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <description>Registration Plate Number</description>
    <label>Registration Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>