force-app/main/default/objects/Location/fields/Site_Instruction_Notes__c.field-meta.xml
<CustomField>
    <fullName>Site_Instruction_Notes__c</fullName>
    <description>Brief searchable notes about the Location. Retrieved and displayed in the Transport mobile collect deliver flow.</description>
    <inlineHelpText>Brief searchable notes about the Location. Retrieved and displayed in the Transport mobile collect deliver flow.</inlineHelpText>
    <label>Site Notes</label>
    <type>TextArea</type>
</CustomField>