force-app/main/default/objects/Location/fields/Site_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Site_Instructions__c</fullName>
    <description>Detailed notes about the Location.  Retrieved and displayed in the Transport mobile collect deliver flow.</description>
    <inlineHelpText>Detailed notes about the Location.  Retrieved and displayed in the Transport mobile collect deliver flow.</inlineHelpText>
    <label>Site Instructions</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>