force-app/main/default/objects/Location/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prime Mover</fullName>
            </value>
            <value>
                <fullName>Rigid Vehicle</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Ad hoc customer</fullName>
            </value>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>Annexe</fullName>
            </value>
            <value>
                <fullName>Blue Depot Box</fullName>
            </value>
            <value>
                <fullName>Business Centre</fullName>
            </value>
            <value>
                <fullName>Business Hubs</fullName>
            </value>
            <value>
                <fullName>City Delivery Centre</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Country Mail Centre</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Delivery Centre</fullName>
            </value>
            <value>
                <fullName>Delivery Facility</fullName>
            </value>
            <value>
                <fullName>Handover Point</fullName>
            </value>
            <value>
                <fullName>International Airport</fullName>
            </value>
            <value>
                <fullName>Licensed Post Office</fullName>
            </value>
            <value>
                <fullName>Mail Centre</fullName>
            </value>
            <value>
                <fullName>Mail Sorting Centre</fullName>
            </value>
            <value>
                <fullName>Node</fullName>
            </value>
            <value>
                <fullName>Parcel Centre</fullName>
            </value>
            <value>
                <fullName>Parcel Locker</fullName>
            </value>
            <value>
                <fullName>Post Office</fullName>
            </value>
            <value>
                <fullName>Post Office Agency</fullName>
            </value>
            <value>
                <fullName>PostShop Franchise</fullName>
            </value>
            <value>
                <fullName>Retail Post</fullName>
            </value>
            <value>
                <fullName>Returns</fullName>
            </value>
            <value>
                <fullName>Revenue Protection</fullName>
            </value>
            <value>
                <fullName>Shipping Terminal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>