force-app/main/default/objects/Location/recordTypes/Despatch_Location.recordType-meta.xml
<RecordType>
    <fullName>Despatch_Location</fullName>
    <active>true</active>
    <description>Used to store location information for Contract Lodgement.  Contact: Clark, Michael (IT) &lt;Michael.Clark@auspost.com.au&gt;</description>
    <label>Despatch Location</label>
</RecordType>