force-app/main/default/objects/Location/recordTypes/Site.recordType-meta.xml
<RecordType>
    <fullName>Site</fullName>
    <active>true</active>
    <description>A customer or delivery site where products are collected and delivered, and where trailers may be located.</description>
    <label>Site</label>
</RecordType>