force-app/main/default/objects/Location/recordTypes/Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Vehicle</fullName>
    <active>false</active>
    <description>Truck, trailer or other vehicle record.</description>
    <label>Vehicle</label>
</RecordType>