force-app/main/default/objects/Location/validationRules/Inventory_and_Mobile_Location_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Inventory_and_Mobile_Location_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(LocationType , &apos;Vehicle&apos;) 
&amp;&amp; (IsInventoryLocation = false || 
    IsMobile  = false)</errorConditionFormula>
    <errorMessage>Inventory Location and Mobile Location are required for Vehicle</errorMessage>
</ValidationRule>