force-app/main/default/objects/Location/validationRules/Inventory_Required_on_Site.validationRule-meta.xml
<ValidationRule>
    <fullName>Inventory_Required_on_Site</fullName>
    <active>true</active>
    <description>Indicates whether the location stores product.  Transport records product against site, so this field must be checked to associated product items with the location.</description>
    <errorConditionFormula>ISPICKVAL(LocationType , &apos;Site&apos;) 
&amp;&amp; (IsInventoryLocation = false)</errorConditionFormula>
    <errorMessage>Inventory Location is required for Site.</errorMessage>
</ValidationRule>