force-app/main/default/objects/Location/validationRules/Type_Required_Required_On_Vehicle.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_Required_Required_On_Vehicle</fullName>
    <active>true</active>
    <description>Type must be set on a Vehicle record</description>
    <errorConditionFormula>ISPICKVAL(LocationType , &apos;Vehicle&apos;) 
&amp;&amp; ( TEXT(Type__c)  = null)</errorConditionFormula>
    <errorMessage>Type must be set on a Vehicle</errorMessage>
</ValidationRule>