force-app/main/default/objects/Location/listViews/ACT_Vehicles.listView-meta.xml
<ListView>
    <fullName>ACT_Vehicles</fullName>
    <columns>FleetNumber__c</columns>
    <columns>Name</columns>
    <columns>ParkingBay__c</columns>
    <columns>Status__c</columns>
    <columns>Capacity__c</columns>
    <columns>Type__c</columns>
    <columns>Barcode_A__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Hire_Vehicle__c</columns>
    <columns>Line_Haul__c</columns>
    <columns>Model__c</columns>
    <columns>Make__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>contains</operation>
        <value>NSW</value>
    </filters>
    <filters>
        <field>LocationType</field>
        <operation>equals</operation>
        <value>Vehicle</value>
    </filters>
    <filters>
        <field>Service_Territory__c</field>
        <operation>equals</operation>
        <value>Canberra</value>
    </filters>
    <label>ACT Vehicles</label>
</ListView>