force-app/main/default/objects/Location/listViews/All_Active_QLD_Vehicles.listView-meta.xml
<ListView>
    <fullName>All_Active_QLD_Vehicles</fullName>
    <columns>FleetNumber__c</columns>
    <columns>Name</columns>
    <columns>ParkingBay__c</columns>
    <columns>Status__c</columns>
    <columns>Capacity__c</columns>
    <columns>Type__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Barcode_A__c</columns>
    <columns>Hire_Vehicle__c</columns>
    <columns>Line_Haul__c</columns>
    <columns>Model__c</columns>
    <columns>Make__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>contains</operation>
        <value>QLD</value>
    </filters>
    <filters>
        <field>LocationType</field>
        <operation>equals</operation>
        <value>Vehicle</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notContain</operation>
        <value>Decommsioned</value>
    </filters>
    <label>All Active QLD Vehicles</label>
</ListView>