force-app/main/default/objects/Location/listViews/All_NSW_Sites.listView-meta.xml
<ListView>
    <fullName>All_NSW_Sites</fullName>
    <columns>Name</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>Post_Code__c</columns>
    <columns>State__c</columns>
    <columns>Node_Type__c</columns>
    <columns>Site_Instruction_Notes__c</columns>
    <columns>SiteInstructions__c</columns>
    <columns>Max_Vehicle_Access__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LocationType</field>
        <operation>equals</operation>
        <value>Site</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>contains</operation>
        <value>NSW,ACT</value>
    </filters>
    <label>All NSW Sites</label>
</ListView>