force-app/main/default/objects/Location/listViews/All_QLD_Sites.listView-meta.xml
<ListView>
    <fullName>All_QLD_Sites</fullName>
    <columns>Name</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>AlternateAddress__c</columns>
    <columns>State__c</columns>
    <columns>Site_Instruction_Notes__c</columns>
    <columns>Max_Vehicle_Access__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LocationType</field>
        <operation>equals</operation>
        <value>Site</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>contains</operation>
        <value>QLD</value>
    </filters>
    <filters>
        <field>Node_Type__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <label>All QLD Sites</label>
</ListView>