force-app/main/default/objects/Location/listViews/All_QLD_Sites1.listView-meta.xml
<ListView>
    <fullName>All_QLD_Sites1</fullName>
    <columns>Name</columns>
    <columns>LocationType</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>QLD</value>
    </filters>
    <label>All QLD Sites</label>
</ListView>