force-app/main/default/objects/Location/listViews/All_Sites.listView-meta.xml
<ListView>
    <fullName>All_Sites</fullName>
    <columns>Name</columns>
    <columns>Node_Type__c</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Max_Vehicle_Access__c</columns>
    <columns>Post_Code__c</columns>
    <columns>Expiry_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LocationType</field>
        <operation>equals</operation>
        <value>Site</value>
    </filters>
    <filters>
        <field>State__c</field>
        <operation>contains</operation>
        <value>Vic</value>
    </filters>
    <filters>
        <field>Node_Type__c</field>
        <operation>contains</operation>
        <value>Adhoc customer,Customer</value>
    </filters>
    <label>All Sites</label>
</ListView>