force-app/main/default/objects/Location/listViews/All_Trailers.listView-meta.xml
<ListView>
    <fullName>All_Trailers</fullName>
    <columns>Name</columns>
    <columns>Description</columns>
    <columns>FleetNumber__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>ParentLocation</columns>
    <columns>Service_Territory__c</columns>
    <columns>Line_Haul__c</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LocationType</field>
        <operation>equals</operation>
        <value>Vehicle</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Trailer</value>
    </filters>
    <filters>
        <field>Service_Territory__c</field>
        <operation>equals</operation>
        <value>Melbourne</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Decommissioned</value>
    </filters>
    <label>All Trailers</label>
</ListView>