force-app/main/default/objects/Location/listViews/ALL_Trailers_with_no_capacity.listView-meta.xml
<ListView>
    <fullName>ALL_Trailers_with_no_capacity</fullName>
    <columns>FleetNumber__c</columns>
    <columns>Name</columns>
    <columns>ParkingBay__c</columns>
    <columns>Status__c</columns>
    <columns>Capacity__c</columns>
    <columns>Type__c</columns>
    <columns>Barcode_A__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Hire_Vehicle__c</columns>
    <columns>Line_Haul__c</columns>
    <columns>Model__c</columns>
    <columns>Make__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>State__c</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LocationType</field>
        <operation>equals</operation>
        <value>Vehicle</value>
    </filters>
    <filters>
        <field>Capacity__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Rigid Vehicle,Trailer</value>
    </filters>
    <label>ALL Trailers with no capacity</label>
</ListView>