force-app/main/default/objects/Location/listViews/All_Vehicles1.listView-meta.xml
<ListView>
    <fullName>All_Vehicles1</fullName>
    <columns>Name</columns>
    <columns>LocationType</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Id</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Owner</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>LocationType</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Barcode_A__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>FleetNumber__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Vehicles</label>
    <language>en_US</language>
</ListView>